--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -3,15 +3,26 @@
     <h1>Search Results</h1>
 
     <h2>Products that Match</h2>
+      <% if @results_products.empty?%>
+        <p>No products matched the search.</p>
+      <% end %>
       <% @results_products.each do |results_product| %>
         <%= link_to results_product.name, product_path(results_product.id) %><br>
       <% end %>
+      <%= will_paginate @results_products %>
     <h2>Product Reviews that Match</h2>
+      <% if @results_reviewers.empty?%>
+        <p>No reviewers matched the search.</p>
+      <% end %>
       <% @results_reviewers.each do |results_reviewer| %>
         <% _reviewed_product = Product.find_by(id: results_reviewer.product_id) %>
         <%= link_to (results_reviewer.author + " review of " + _reviewed_product.name), review_path(id: results_reviewer, product_id: results_reviewer.product_id) %><br>
       <% end %>
+      <%= will_paginate @results_reviewers %>
     <h2>Reviews Text that Matches</h2>
+      <% if @results_reviews.empty?%>
+        <p>No reviews matched the search.</p>
+      <% end %>
       <% @results_reviews.each do |results_review| %>
         <% _reviewed_product = Product.find_by(id: results_review.product_id) %>
         <%= link_to (results_review.author + " review of " + _reviewed_product.name), review_path(id: results_review, product_id: results_review.product_id) %><br>
@@ -19,7 +30,7 @@
         <br>
         <br>
       <% end %>
-
+      <%= will_paginate @results_reviews %>
   </div>  
 
   <div>Font made from <a href="http://www.onlinewebfonts.com">oNline Web Fonts</a>is licensed by CC BY 3.0</div>
